[package]
name        = "cortex"
version     = "0.1.0"
edition.workspace     = true
authors.workspace     = true
license     = "AGPL-3.0"
repository  = "https://github.com/RocinRykor/cortex"

[lib]
name = "cortex"
path = "src/lib.rs"

[dependencies]
colored = { workspace = true}
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }